Fix paragraph text overflow

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -167,6 +167,7 @@
 
       &__body {
         flex: 1;
+        width: 100%;
         padding: .5rem;
 
         &__textarea {
@@ -192,6 +193,7 @@
           background: rgb(226, 226, 226);
           width: 100%;
           height: 100%;
+          overflow-wrap: break-word;
           border-bottom-left-radius: .5rem;
           border-bottom-right-radius: .5rem;
         }
